Add user password authentication

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,9 @@ convert=Convert
 word.subtitle = Transform your image text into a beautifully crafted Microsoft Word document.
 
 pdf.subtitle = Transform your image text into a beautifully crafted PDF document.
+
+
+tesseract.lang.codes=ara, aze, bel, ben, bul, ces, chi_sim, chi_tra, dan, eng, equ, est, fas, fin, fra, gle, grc, hin, hrv, hun, hye, ind, ita, jpn, kat, kaz, kir, kor, lat, lav, mon, nld, pol, por, rus, spa, syr, tat, tgk, ukr, uzb, uzb_cyrl
+# tesseract.lang.names=Arabic, Azerbaijani, Belarusian, Bengali, Bulgarian, Czech, Chinese - Simplified, Chinese - Traditional, Danish, English, Math / equation detection module, Estonian, Persian, Finnish, French, Irish, Greek, Hindi, Croatian, Hungarian, Armenian, Indonesian, Italian, Japanese, Georgian, Kazakh, Kyrgyz, Korean, Latin, Latvian, Mongolian, Dutch, Polish, Portuguese, Russian, Syriac, Tatar, Tajik, Ukrainian, Uzbek, Uzbek - Cyrilic
+tesseract.lang.names[0] = Arabic
+tesseract.lang.names[1]=Azerbaijan
