--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -20,3 +20,6 @@ word.subtitle=Превратите текст изображения в крас
 
 
 pdf.subtitle=Превратите текст изображения в красиво оформленный PDF документ.
+
+tesseract.lang.codes=ara, aze, bel, ben, bul, ces, chi_sim, chi_tra, dan, eng, equ, est, fas, fin, fra, gle, grc, hin, hrv, hun, hye, ind, ita, jpn, kat, kaz, kir, kor, lat, lav, mon, nld, pol, por, rus, spa, syr, tat, tgk, ukr, uzb, uzb_cyrl
+tesseract.lang.names=арабский, азербайджанский, белорусский, бенгальский, болгарский, чешский, китайский (упрощенный), китайский (традиционный), датский, английский, модуль обнаружения математических/уравнений, эстонский, персидский, финский, французский, ирландский, греческий, хинди, Хорватский, венгерский, армянский, индонезийский, итальянский, японский, грузинский, казахский, киргизский, корейский, латинский, латышский, монгольский, голландский, польский, португальский, русский, сирийский, татарский, таджикский, украинский, узбекский, узбекский - кириллица
