--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -20,6 +20,15 @@ word.subtitle=Превратите текст изображения в крас
 
 
 pdf.subtitle=Превратите текст изображения в красиво оформленный PDF документ.
+loading.process=Ваш запрос обрабатывается, пожалуйста, подождите...
 
-tesseract.lang.codes=ara, aze, bel, ben, bul, ces, chi_sim, chi_tra, dan, eng, equ, est, fas, fin, fra, gle, grc, hin, hrv, hun, hye, ind, ita, jpn, kat, kaz, kir, kor, lat, lav, mon, nld, pol, por, rus, spa, syr, tat, tgk, ukr, uzb, uzb_cyrl
-tesseract.lang.names=арабский, азербайджанский, белорусский, бенгальский, болгарский, чешский, китайский (упрощенный), китайский (традиционный), датский, английский, модуль обнаружения математических/уравнений, эстонский, персидский, финский, французский, ирландский, греческий, хинди, Хорватский, венгерский, армянский, индонезийский, итальянский, японский, грузинский, казахский, киргизский, корейский, латинский, латышский, монгольский, голландский, польский, португальский, русский, сирийский, татарский, таджикский, украинский, узбекский, узбекский - кириллица
+login=Войти
+login.title=Пожалуйста, войдите в систему
+login.error=Неверное имя пользователя и пароль
+login.logout=Вы вышли из системы
+login.email=Электронная почта
+login.password=Пароль
+
+signup=Зарегистрироваться
+signup.message=Мы никогда не передадим ваш адрес электронной почты кому-либо еще.
+signup.title=Регистрация
