Download file from fiile system

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ choose.lang = Choose language
 convert=Convert
 
 word.subtitle = Transform your image text into a beautifully crafted Microsoft Word document.
+document=The document will be downloaded automatically
 
 pdf.subtitle = Transform your image text into a beautifully crafted PDF document.
 
@@ -35,3 +36,5 @@ login.password=Password
 signup=Sign up
 signup.title=Sign up
 signup.message=We'll never share your email with anyone else.
+signup.error=User with this email already exists
+signup.button=Sign up
