--- a/src/main/resources/messages_kg.properties
+++ b/src/main/resources/messages_kg.properties
@@ -13,7 +13,7 @@ image.format=Жүктөө .png .jpg .jpeg
 
 choose.lang=Тилди танда
 айландыруу=Айландыруу
-
+document=Документ автоматтык түрдө жүктөлөт
 word.subtitle=Сүрөт текстин сонун жасалган Microsoft Word документине айландырыңыз.
 
 
@@ -30,3 +30,5 @@ login.password=Пароль
 signup=Катталуу
 signup.message=Биз сиздин электрондук почтаңыздын дарегин эч ким менен бөлүшпөйбүз.
 signup.title=Катталуу
+signup.error=Бул электрондук почтасы бар колдонуучу мурунтан эле бар
+signup.button=Катталуу
