--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,7 +17,7 @@ choose.lang=Выберите язык
 convert=Преобразовать
 
 word.subtitle=Превратите текст изображения в красиво оформленный документ Microsoft Word.
-
+document=Документ будет загружен автоматически
 
 pdf.subtitle=Превратите текст изображения в красиво оформленный PDF документ.
 loading.process=Ваш запрос обрабатывается, пожалуйста, подождите...
@@ -32,3 +32,6 @@ login.password=Пароль
 signup=Зарегистрироваться
 signup.message=Мы никогда не передадим ваш адрес электронной почты кому-либо еще.
 signup.title=Регистрация
+
+signup.error=Пользователь с таким email уже существует
+Signup.button=Зарегистрироваться
