--- a/src/main/resources/messages_kg.properties
+++ b/src/main/resources/messages_kg.properties
@@ -32,3 +32,9 @@ signup.message=Биз сиздин электрондук почтаңыздын
 signup.title=Катталуу
 signup.error=Бул электрондук почтасы бар колдонуучу мурунтан эле бар
 signup.button=Катталуу
+
+main.name=Башкы
+files.name=Файлдар
+
+image.pdf=Сүрөт PDF форматына
+image.docx=Сүрөт Docx
