--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -35,3 +35,9 @@ signup.title=Регистрация
 
 signup.error=Пользователь с таким email уже существует
 Signup.button=Зарегистрироваться
+
+main.name=Главная
+
+files.name=Файлы
+image.pdf=Изображение в PDF
+image.docx=Изображение в Docx
