--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,3 +38,9 @@ signup.title=Sign up
 signup.message=We'll never share your email with anyone else.
 signup.error=User with this email already exists
 signup.button=Sign up
+
+main.name=Home
+files.name=Files
+
+image.pdf=Image to PDF
+image.docx=Image to Docx
