Add content section

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,3 +44,13 @@ files.name=Files
 
 image.pdf=Image to PDF
 image.docx=Image to Docx
+
+
+dev.name=© 2024 Arsen Baktiyarov
+
+content.first.title=1. Upload an image 
+content.first=Upload an image to convert. Files in PNG, JPG, JPEG, Webp formats are supported. The only limitation is that the file size should not exceed 10 MB.
+content.second.title=2. Output language and format
+content.second=For the most accurate image-to-text conversion, select the appropriate recognition language. You can also select the output format (MS Docx, PDF or text format).
+content.third.title=3. Download 
+content.third=After conversion, you can download the resulting edited file or copy the extracted text to the clipboard.
