--- a/src/main/resources/messages_kg.properties
+++ b/src/main/resources/messages_kg.properties
@@ -37,4 +37,13 @@ main.name=Башкы
 files.name=Файлдар
 
 image.pdf=Сүрөт PDF форматына
-image.docx=Сүрөт Docx
+image.docx=Сүрөт Docx форматына
+
+dev.name=© 2024 Арсен Бактияров
+
+content.first.title=1. Сүрөт жүктөө
+content.first=Айландыруу үчүн сүрөттү жүктөө. PNG, JPG, JPEG, Webp форматтарындагы файлдар колдоого алынат. Бир гана чектөө - файлдын көлөмү 10 МБ ашпашы керек.
+content.second.title=2. Чыгуу тили жана форматы
+content.second=Эң так сүрөттү текстке которуу үчүн, ылайыктуу таануу тилин тандаңыз. Сиз ошондой эле чыгаруу форматын тандай аласыз (MS Docx, PDF же текст форматы).
+content.third.title=3. Жүктөп алуу
+content.third=Конвертациядан кийин сиз оңдолгон файлды жүктөй аласыз же алынган текстти алмашуу буферине көчүрө аласыз.
