--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,3 +41,13 @@ main.name=Главная
 files.name=Файлы
 image.pdf=Изображение в PDF
 image.docx=Изображение в Docx
+
+
+dev.name=© 2024 Арсен Бактияров
+
+content.first.title=1. Загрузите изображение
+content.first=Загрузите изображение для преобразования. Поддерживаются файлы в форматах PNG, JPG, JPEG, Webp. Единственное ограничение – размер файла не должен превышать 10 МБ.
+content.second.title=2. Язык и формат вывода
+content.second=Для наиболее точного преобразования изображения в текст выберите соответствующий язык распознавания. Вы также можете выбрать выходной формат (MS Docx, PDF или текстовый формат).
+content.third.title=3. Скачать
+content.third=После конвертации вы можете скачать полученный отредактированный файл или скопировать извлеченный текст в буфер обмена.
